<resources>
    <string name="app_name">CakeCept</string>
    <string name="action_erase">Erase</string>
    <string name="action_delete">Delete</string>
    <string name="action_undo">Undo</string>
    <string name="action_brush">Brush</string>
    <string name="action_color">Color</string>
    <string name="action_save">Save</string>
    <!--Navigation Bar-->
    <string name="action_message">Messages</string>
    <string name="action_designer">Designer</string>
    <string name="action_calendar">Calendar</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Paint Brush Size-->
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

    <!--Chat Activity Strings-->
    <string name="title_activity_chat">Chat Activity</string>
    <string name="new_chat">New Chat</string>
    <string name="my_registration_id">Registration Id: %1$d</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="start_chat">Start Chat</string>
    <string name="chats">Chats</string>
    <string name="user_id_not_found">Unable to find user %1$s</string>
    <string name="subject_hint">Enter a subject</string>
    <string name="subject_required">Subject is required</string>
    <string name="enter_a_regid">Enter a registration ID</string>
    <string name="not_valid_regid">Not a valid registration ID</string>
    <string name="start">Start</string>
    <string name="password_cant_be_changed">Password cant be changed</string>
</resources>
